--- a/cron/map.jinja
+++ b/cron/map.jinja
@@ -10,7 +10,7 @@
 			'default_one_instance': False,
 			'default_comment': '',
 			'default_log': '/var/log/cron.log',
-			'default_enabled': True
+			'default_disabled': False
     },
 
     'Ubuntu-14.04': {
@@ -23,7 +23,7 @@
 			'default_one_instance': False,
 			'default_comment': '',
 			'default_log': '/var/log/cron.log',
-			'default_enabled': True
+			'default_disabled': False
     },
 
     'Unknown': {
@@ -36,7 +36,7 @@
 			'default_one_instance': False,
 			'default_comment': '',
 			'default_log': '/var/log/cron.log',
-			'default_enabled': True
+			'default_disabled': False
     }
 
 }, grain='osfinger', merge=salt['pillar.get']('cron',{}), default='Unknown') %}
